# ot-harjoitustyo

./: .coveragerc  .gitignore  .pylintrc  README.md  number_theoryUI.py  number_theory_ui.py  pyproject.toml  tasks.py  userAccounts.txt
dokumentaatio/: arkkitehtuuri.md  changelog.md  testdocument.md  tyoaikakirjanpito.md  usageinstructions.md  vaatimusmaarittely.md
laskarit/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: HSL.md  monopoly.md
src/: account_login.py  file_useage.py  main.py  numberTheory.py  number_theory.py  number_theoryUI.py  number_theory_ui.py  operations.py  search_history.py
src/functionality/: account_login.py  file_useage.py  number_checks.py  operations.py  quizes.py  quizzes.py  search_history.py  sort.py
src/tests/: numberTheory_test.py  number_theory_test.py
src/ui/: number_theory_ui.py
